--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "uppg2",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.html",
+  "source": "src/index.html",
   "scripts": {
     "start": "parcel",
     "build": "parcel build"
